argocd/backstage/clusters/shashank-b1/apps/nginx/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    backstage.io/kubernetes-id: nginx
    istio.io/dataplane-mode: ambient
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
    backstage.io/kubernetes-id: nginx
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
  labels:
    backstage.io/kubernetes-id: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        backstage.io/kubernetes-id: nginx
    spec:
      serviceAccountName: nginx
      containers:
      - image: nginx:1.14.2
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
